[package]
name = "jfi_http_api"
version = "0.1.3"
edition = "2021"
authors = ["github.com/jerryshell"]

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
axum = "0.5.15"
jfi_lib = { path = "../jfi_lib" }
serde_json = "1.0.85"
tower-http = { version = "0.3.4", features = ["cors"] }
cached = "0.38.0"
