[package]
name = "jfi_lib"
version = "0.1.3"
edition = "2021"
authors = ["github.com/jerryshell"]

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-test = "0.4.2"
anyhow = "1.0.66"
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
cached = "0.40.0"
